Send the email as multiple types